--- a/index.html
+++ b/index.html
@@ -27,35 +27,13 @@
 
     <!-- JS -->
      <script src="src/components/carousel.js" defer></script> <!-- carousel -->
+     <script src="src/components/header.js" defer></script> <!-- navbar -->
+     <script src="src/components/footer.js" defer></script> <!-- footer -->
   </head>
 
   <body>
     <header>
-      <nav class="loggedOut-nav">
-
-        <!-- Logo -->
-        <a class="navlogo" href="index.html" aria-label="home page">
-          <span><h3>wave</h3></span>
-          <span class="logo-icon"><i class="fa-solid fa-tower-broadcast"></i></span>
-          <span class="logo-right-side"><h3>length</h3></span>
-        </a>
-
-        <ul>
-          <!-- Log In btn -->
-          <li>
-            <a href="login.html" aria-label="log in">
-              <button class="sec-btn">log in</button>
-            </a>
-          </li>
-
-          <!--Sign Up btn-->
-          <li>
-            <a href="signUp.html" aria-label="sign up new account">
-              <button class="pri-btn">sign up</button>
-            </a>
-          </li>
-        </ul>
-      </nav>
+      <nav id="js-nav" aria-label="nav-section"></nav>
     </header>
 
     <main>
@@ -152,11 +130,11 @@
             </div>
   
             <div class="category">
-              <h3>technology</h3>
+              <h3>programming</h3>
             </div>
   
             <div class="category">
-              <h3>something</h3>
+              <h3>technology</h3>
             </div>
           </div>
         </article>
@@ -201,92 +179,31 @@
         </article>
       </section>
       <!-- NEWSLETTER END -->
+
+      <!-- GALLERY START -->
+       <section class="gallery">
+        <article class="gallery-container">
+          <div class="gallery-title"><h2>our gallery</h2></div>
+
+          <div class="gallery-list">
+            <div class="gallery-item">
+              <img src="src/assets/images/Logo_1.png" alt="gallery img">
+            </div>
+
+            <div class="gallery-item">
+              <img src="src/assets/images/Logo_2.png" alt="gallery img">
+            </div>
+
+            <div class="gallery-item">
+              <img src="src/assets/images/Logo_1.png" alt="gallery img">
+            </div>
+          </div>
+        </article>
+       </section>
     </main>
 
     <!-- FOOTER START -->
-    <footer class="footer-section" aria-label="footer">
-      <article class="footer-container">
-        <div class="footer-logos">
-          <img src="src/assets/images/Logo_1.png" alt="logo-image">
-
-          <div class="footer-social-media">
-            <ul>
-              <li>
-                <a href="#" aria-label="github"><i class="fa-brands fa-github"></i></a>
-              </li>
-              <li>
-                <a href="#" aria-label="bluesky"><i class="fa-brands fa-bluesky"></i></a>
-              </li>
-              <li>
-                <a href="#" aria-label="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
-              </li>
-              <li>
-                <a href="#"></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="footer-links">
-          <!-- Contact links -->
-          <div>
-            <h5>company</h5>
-            <ul>
-              <li>
-                <a href="#">about us</a>
-              </li>
-              <li>
-                <a href="#">contact us</a>
-              </li>
-              <li>
-                <a href="#">careers</a>
-              </li>
-              <li>
-                <a href="#">our team</a>
-              </li>
-            </ul>
-          </div>
-
-          <!-- Categories links -->
-          <div>
-            <h5>categories</h5>
-            <ul>
-              <li>
-                <a href="#">design</a>
-              </li>
-              <li>
-                <a href="#">programming</a>
-              </li>
-              <li>
-                <a href="#">technology</a>
-              </li>
-            </ul>
-          </div>
-          
-          <!-- Legal links -->
-          <div>
-            <h5>legal</h5>
-            <ul>
-              <li>
-                <a href="#">privacy policy</a>
-              </li>
-              <li>
-                <a href="#">terms of use</a>
-              </li>
-              <li>
-                <a href="#">cookie policy</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </article>
-
-      <hr>
-
-      <article>
-        <h6>© 2025 WaveLength. All rights reserved.</h6>
-      </article>
-    </footer>
+    <footer id="js-footer" aria-label="footer-section"></footer>
     <!-- FOOTER END -->
   </body>
 </html>
