--- a/post.html
+++ b/post.html
@@ -7,35 +7,55 @@
 
     <title>NorwayUnfiltered</title>
 
-    <meta name="description" content="blog post">
-    <meta name="keywords" content="blogs about programming, it trends for developers, how to stay updated in it">
-    <meta name="author" content="WaveLength">
+    <meta name="description" content="blog post" />
+    <meta
+      name="keywords"
+      content="blogs about programming, it trends for developers, how to stay updated in it"
+    />
+    <meta name="author" content="WaveLength" />
 
     <!-- This is taken from google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Fav Icon -->
-    <link rel="icon" type="image/icon" href="src/assets/images/comments-regular.svg"/>
+    <link
+      rel="icon"
+      type="image/icon"
+      href="src/assets/images/comments-regular.svg"
+    />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="src/assets/styles/style.css">
-    
+    <link rel="stylesheet" href="src/assets/styles/style.css" />
+
     <!-- Fontawesome -->
-    <script src="https://kit.fontawesome.com/49c1127b94.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/49c1127b94.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- JS -->
-     <script type="module" src="src/features/blog/blogPost.js" defer></script> <!-- blog post page details -->
-     <script src="src/components/header.js" defer></script> <!-- navbar -->
-     <script src="src/components/footer.js" defer></script> <!-- footer -->
-     <script type="module" src="src/utils.js" defer></script> <!-- utils -->
+    <script type="module" src="src/features/blog/blogPost.js" defer></script>
+    <!-- blog post page details -->
+    <script src="src/components/header.js" defer></script>
+    <!-- navbar -->
+    <script src="src/components/footer.js" defer></script>
+    <!-- footer -->
+    <script type="module" src="src/utils.js" defer></script>
+    <!-- utils -->
   </head>
 
   <body>
+    <header>
+      <nav id="js-nav" aria-label="nav-section"></nav>
+    </header>
 
     <main>
-        <section id="js-blog-details"></section>
+      <section id="js-blog-details"></section>
     </main>
 
     <!-- FOOTER START -->
