--- a/index.html
+++ b/index.html
@@ -124,10 +124,15 @@
             </form>
           </div>
 
-          <button class="search-btn" aria-label="search for blog posts">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <p>search</p>
-          </button>
+          <div>
+            <input
+              type="text"
+              id="js-search-input"
+              class="search-btn"
+              placeholder="search blogs"
+              aria-label="type search query here"
+            />
+          </div>
         </article>
       </section>
 
