--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <!-- main -->
     <script type="module" src="src/components/carousel.js" defer></script>
     <!-- carousel -->
-    <script src="src/components/header.js" defer></script>
+    <script type="module" src="src/components/header.js" defer></script>
     <!-- navbar -->
-    <script src="src/components/footer.js" defer></script>
+    <script type="module" src="src/components/footer.js" defer></script>
     <!-- footer -->
   </head>
 
