--- a/post.html
+++ b/post.html
@@ -41,12 +41,10 @@
     <!-- JS -->
     <script type="module" src="src/features/blog/blogPost.js" defer></script>
     <!-- blog post page details -->
-    <script src="src/components/header.js" defer></script>
+    <script type="module" src="src/components/header.js" defer></script>
     <!-- navbar -->
-    <script src="src/components/footer.js" defer></script>
+    <script type="module" src="src/components/footer.js" defer></script>
     <!-- footer -->
-    <script type="module" src="src/utils.js" defer></script>
-    <!-- utils -->
   </head>
 
   <body>
