--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
             </form>
           </div>
 
+          <div id="js-create-post" class="hidden">
+            <a href="newPost.html">
+              <button class="pri-btn">
+                <i class="fa-solid fa-plus"></i> create
+              </button>
+            </a>
+          </div>
+
           <div>
             <input
               type="text"
