--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>WaveLength</title>
+    <title>NorwayUnfiltered</title>
 
     <meta name="description" content="" />
     <meta
@@ -26,7 +26,7 @@
     <link
       rel="icon"
       type="image/icon"
-      href="src/assets/images/tower-broadcast-solid.svg"
+      href="src/assets/images/comments-regular.svg"
     />
 
     <!-- CSS -->
